chore: setup biome precommit hook

--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "dev": "tsup src/index.ts --format cjs,esm --dts --watch",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "hooks:pre-commit": "biome check --write --staged --no-errors-on-unmatched && git update-index --again",
+    "lint": "biome check .",
+    "lint:fix": "biome check . --write"
   },
   "devDependencies": {
+    "simple-git-hooks": "2.11.1",
     "tsup": "^8.4.0",
     "typescript": "^5.8.2"
   },
-  "files": [
-    "dist"
-  ]
+  "simple-git-hooks": {
+    "pre-commit": "bun run hooks:pre-commit"
+  },
+  "files": ["dist"]
 }
