--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "author": "Gabo Esquivel",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "bin": "./dist/cli.js",
   "scripts": {
-    "build": "tsup src/index.ts --format cjs,esm --dts",
-    "dev": "tsup src/index.ts --format cjs,esm --dts --watch",
+    "build": "tsup src/index.ts src/cli.ts --format cjs,esm --dts",
+    "dev": "tsup src/index.ts src/cli.ts --format cjs,esm --dts --watch",
     "prepublishOnly": "npm run build",
     "hooks:pre-commit": "biome check --write --staged --no-errors-on-unmatched && git update-index --again",
     "lint": "biome check .",
     "lint:fix": "biome check . --write"
   },
   "devDependencies": {
+    "@types/node": "^20.11.25",
     "simple-git-hooks": "2.11.1",
     "tsup": "^8.4.0",
     "typescript": "^5.8.2"
@@ -21,5 +23,8 @@
   "simple-git-hooks": {
     "pre-commit": "bun run hooks:pre-commit"
   },
-  "files": ["dist"]
+  "files": ["dist"],
+  "dependencies": {
+    "chalk": "^4.1.2"
+  }
 }
